--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
+        tools:context=".Authorization.MainActivity"
         android:background="@color/colorPrimary"
 
 >
@@ -26,7 +26,7 @@
     <ImageView
             android:layout_width="230dp"
             android:scaleType="fitXY"
-            android:layout_height="230dp" app:srcCompat="@drawable/chat" android:id="@+id/imageView"
+            android:layout_height="230dp" app:srcCompat="@drawable/chat_2" android:id="@+id/imageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
