--- a/app/src/main/res/layout/activity_display_messagers.xml
+++ b/app/src/main/res/layout/activity_display_messagers.xml
@@ -1,24 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+
+
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".DispalayMessages.DisplayMessages"
+        android:orientation="vertical"
+        tools:context=".DisplayMessages.DisplayMessages"
+        android:background="@color/colorWhite"
 >
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/tool_bar"
             style="@style/MyToolBar"
             app:title="Сообщения"
             app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
-
+            android:elevation="1dp"
     />
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/refresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".DisplayMessages.DisplayMessages"
+    >
+        <ListView
+                android:dividerHeight="0dp"
+                android:background="@color/colorWhite"
+                android:divider="@color/colorWhite"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/list_view"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tool_bar"/>
 
-    <ListView
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/test"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/tool_bar"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
+
+
+
+</LinearLayout>
