--- a/app/src/main/res/layout/activity_my_list_adapter.xml
+++ b/app/src/main/res/layout/activity_my_list_adapter.xml
@@ -39,8 +39,8 @@
             android:text="MESSAGE"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView2"
-
+            android:id="@+id/textViewLastMessage"
+            android:maxLength="20"
             android:layout_weight="1"
             android:gravity="center"
             app:layout_constraintStart_toStartOf="@+id/textViewUserName"
