--- a/app/src/main/res/layout/activity_full_dialog.xml
+++ b/app/src/main/res/layout/activity_full_dialog.xml
@@ -11,7 +11,18 @@
             android:id="@+id/full_message_tool_bar"
             style="@style/MyToolBar"
             app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
-            android:elevation="1dp"
-    />
+            android:elevation="1dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_gravity="right"
+                android:src="@drawable/ic_launcher_background"
+                android:layout_width="39dp"
+                android:layout_height="39dp"
+                android:layout_marginRight="10dp"
+                app:layout_constraintEnd_toEndOf="@+id/full_message_tool_bar"
+                app:layout_constraintTop_toTopOf="parent"
+                android:id="@+id/full_dialog_photo"/>
+    </androidx.appcompat.widget.Toolbar>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
