--- a/app/src/main/res/layout/activity_full_dialog.xml
+++ b/app/src/main/res/layout/activity_full_dialog.xml
@@ -5,10 +5,14 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".DisplayMessages.FullDialog">
+        tools:context=".DisplayMessages.FullDialog"
+
+
+>
 
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/full_message_tool_bar"
+            app:layout_collapseMode="pin"
             style="@style/MyToolBar"
             app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
             android:elevation="1dp">
@@ -24,5 +28,33 @@
                 android:id="@+id/full_dialog_photo"/>
     </androidx.appcompat.widget.Toolbar>
 
+    <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/square_frame"
+            android:paddingLeft="15dp"
+            android:paddingRight="35dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:hint="Сообщение"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/input_text_message"/>
+    <ImageButton
+            android:layout_marginRight="5dp"
+            android:src="@drawable/ic_send"
+            android:background="@null"
+            android:layout_width="32dp"
+            android:layout_height="36dp"
+            android:id="@+id/button_send_message"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+
+    />
+    <ListView
+
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/full_message_tool_bar"
+            app:layout_constraintBottom_toTopOf="@+id/input_text_message" android:id="@+id/list_view_messages"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
