--- a/app/src/main/res/layout/activity_display_messagers.xml
+++ b/app/src/main/res/layout/activity_display_messagers.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".DisplayMessages.DisplayMessages"
+        tools:context=".DisplayMessages.AllDialogs"
         android:background="@color/colorWhite"
 >
     <androidx.appcompat.widget.Toolbar
@@ -25,7 +25,7 @@
             android:id="@+id/refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".DisplayMessages.DisplayMessages"
+            tools:context=".DisplayMessages.AllDialogs"
     >
         <ListView
                 android:dividerHeight="0dp"
