--- a/app/src/main/res/layout/activity_full_dialog.xml
+++ b/app/src/main/res/layout/activity_full_dialog.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".DisplayMessages.FullDialog"
+        tools:context=".DisplayMessages.FullDialog.FullDialog"
 
 
 >
@@ -52,9 +52,20 @@
     />
     <ListView
 
+            android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+
+            android:dividerHeight="0dp"
+            android:background="@color/colorWhite"
+            android:divider="@color/colorWhite"
+            android:stackFromBottom="true"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/full_message_tool_bar"
-            app:layout_constraintBottom_toTopOf="@+id/input_text_message" android:id="@+id/list_view_messages"/>
+            android:isScrollContainer="false"
+            app:layout_constraintBottom_toTopOf="@+id/input_text_message" android:id="@+id/list_view_messages"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/full_message_tool_bar" app:layout_constraintVertical_bias="1.0"
+    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
