--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorDark">#000000</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorGreen">#008000</color>
 </resources>
