--- a/app/src/main/res/layout/activity_full_dialog.xml
+++ b/app/src/main/res/layout/activity_full_dialog.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".DisplayMessages.FullDialog.FullDialog"
 
 
@@ -28,6 +29,25 @@
                 android:id="@+id/full_dialog_photo"/>
     </androidx.appcompat.widget.Toolbar>
 
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:layout_weight="2"
+            tools:listitem="@android:layout/simple_list_item_2"
+
+            android:background="@color/colorWhite"
+
+            android:stackFromBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="504dp"
+
+
+            android:id="@+id/recycler_view_messages"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.542"
+            app:layout_constraintTop_toBottomOf="@+id/full_message_tool_bar"
+            app:layout_constraintBottom_toTopOf="@+id/input_text_message"/>
+
     <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -38,34 +58,9 @@
             android:paddingBottom="5dp"
             android:hint="Сообщение"
             android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/input_text_message"/>
-    <ImageButton
-            android:layout_marginRight="5dp"
-            android:src="@drawable/ic_send"
-            android:background="@null"
-            android:layout_width="32dp"
-            android:layout_height="36dp"
-            android:id="@+id/button_send_message"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_weight="0"
+            android:id="@+id/input_text_message">
+    </EditText>
 
-    />
-    <ListView
 
-            android:clickable="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-
-            android:dividerHeight="0dp"
-            android:background="@color/colorWhite"
-            android:divider="@color/colorWhite"
-            android:stackFromBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:isScrollContainer="false"
-            app:layout_constraintBottom_toTopOf="@+id/input_text_message" android:id="@+id/list_view_messages"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/full_message_tool_bar" app:layout_constraintVertical_bias="1.0"
-    />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
