--- a/app/src/main/res/layout/activity_my_list_adapter.xml
+++ b/app/src/main/res/layout/activity_my_list_adapter.xml
@@ -4,8 +4,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".DisplayMessages.Adapter.MyListAdapter">
+        android:layout_height="wrap_content"
+        tools:context=".DisplayMessages.Adapter.MyRecyclerAllDialogsAdapter">
 
     <de.hdodenhof.circleimageview.CircleImageView
             android:src="@drawable/ic_launcher_background"
