--- a/app/src/main/res/layout/activity_my_full_dialog_list_adapter.xml
+++ b/app/src/main/res/layout/activity_my_full_dialog_list_adapter.xml
@@ -1,43 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+
+        android:id="@+id/constraint_layout_message"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+
+        android:paddingVertical="5dp"
+        android:paddingHorizontal="10dp"
+
+
+>
 
     <TextView
+            android:id="@+id/textViewMessage"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+
             android:background="@drawable/right_dialog"
             android:textSize="16sp"
             android:maxWidth="350dp"
+
             android:textColor="@color/colorDark"
+
             android:paddingVertical="7dp"
             android:paddingHorizontal="13dp"
 
-            android:text=""
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textViewMessageRight"
+            tools:text="TEST"
+            tools:layout_gravity="start"
+
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
-            android:layout_marginBottom="10dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="10dp" app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintHorizontal_bias="1.0"/>
-
-    <TextView
-            android:background="@drawable/left_dialog"
-            android:textSize="16sp"
-            android:maxWidth="350dp"
-            android:textColor="@color/colorDark"
-            android:paddingVertical="7dp"
-            android:paddingHorizontal="13dp"
-
-            android:text=""
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="5dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="5dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="5dp"
+            app:layout_constraintHorizontal_bias="0.0" android:layout_marginEnd="5dp"/>
+    <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textViewMessageLeft"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
-            android:layout_marginBottom="10dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            android:scaleType="centerCrop"
+
+            android:id="@+id/imageView_full_dialog"
+            android:maxWidth="15dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="5dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="5dp" android:layout_marginEnd="5dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
