--- a/app/src/main/res/layout/activity_my_full_dialog_list_adapter.xml
+++ b/app/src/main/res/layout/activity_my_full_dialog_list_adapter.xml
@@ -35,21 +35,21 @@
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="5dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="5dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="5dp"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginEnd="5dp"/>
+            android:layout_marginStart="5dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="5dp"
+            app:layout_constraintHorizontal_bias="0.5"
+            android:layout_marginEnd="5dp"/>
     <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
 
             android:id="@+id/imageView_full_dialog"
-            android:maxWidth="15dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="5dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="5dp" android:layout_marginEnd="5dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintStart_toStartOf="@+id/textViewMessage"
+            android:layout_marginStart="5dp"
+            app:layout_constraintEnd_toEndOf="@+id/textViewMessage"
+            app:layout_constraintTop_toBottomOf="@+id/textViewMessage"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="5dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
