--- a/app/src/main/res/layout/activity_full_dialog.xml
+++ b/app/src/main/res/layout/activity_full_dialog.xml
@@ -30,16 +30,18 @@
     </androidx.appcompat.widget.Toolbar>
 
 
-    <androidx.recyclerview.widget.RecyclerView
+    <ListView
             android:layout_weight="2"
             tools:listitem="@android:layout/simple_list_item_2"
+            android:stackFromBottom="true"
+
 
             android:background="@color/colorWhite"
 
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 
-            android:id="@+id/recycler_view_messages"
+            android:id="@+id/list_view_messages"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.542"
