--- a/app/src/main/res/layout/activity_my_list_adapter.xml
+++ b/app/src/main/res/layout/activity_my_list_adapter.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".DisplayMessages.Adapter.MyRecyclerAllDialogsAdapter">
+        tools:context=".AllMessages.Adapter.MyRecyclerAllDialogsAdapter">
 
     <de.hdodenhof.circleimageview.CircleImageView
             android:src="@drawable/ic_launcher_background"
