--- a/app/src/main/res/layout/activity_full_dialog.xml
+++ b/app/src/main/res/layout/activity_full_dialog.xml
@@ -35,6 +35,9 @@
             tools:listitem="@android:layout/simple_list_item_2"
             android:stackFromBottom="true"
 
+            android:transcriptMode="normal"
+            android:listSelector="@android:color/transparent"
+
             android:divider="@null"
 
             android:background="@color/colorWhite"
